Started work on DragAndDrop, got node tree populating based upon external libraries

--- a/src/net/ncguy/graph/contextmenu/ContextMenuForm.form
+++ b/src/net/ncguy/graph/contextmenu/ContextMenuForm.form
@@ -25,7 +25,10 @@
         <children>
           <component id="8c41" class="javax.swing.JTree" binding="nodeTree">
             <constraints/>
-            <properties/>
+            <properties>
+              <rootVisible value="false"/>
+              <showsRootHandles value="true"/>
+            </properties>
           </component>
         </children>
       </scrollpane>
